--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,9 @@
 }
 
 .freecodecamp-logo {
-  height: 40px;
+  background-color: var(--bg-logo);
+  height: 50px;
+  margin: 10px;
 }
 
 .container-calculator {
@@ -33,6 +35,7 @@
   background-color: var(--bg-color-calculator-app);
   border-radius:20px;
   border: 6px solid #0f0e0e;
+  margin:30px
 }
 
 .row {
