--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
 .App {
-  width: 100%; */
-  height: 100vh; /* altura nevegador*/
-  padding: 10px; /* separar del borde superior */
+  width: 100%;
+  height: 100vh;
+  padding: 10px;
   background-color: var(--bg-color-app);
-  font-family:var(--font-family-calculator);
+  font-family: var(--font-family-calculator);
   display: flex;
-  flex-wrap: wrap; /*sirve para reajustar tamanio */
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  margin-top: 20px;
 }
 
-/*tamanio imagen */
 .freecodecamp-logo-container {
   width: 100%;
   height: 50px;
@@ -18,8 +18,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /* display: grid;
-  place-items: center; */
 }
 
 .freecodecamp-logo {
@@ -30,12 +28,12 @@
 
 .container-calculator {
   width: 400px;
-  height: 600px;
+  height: 620px;
   padding: 14px;
   background-color: var(--bg-color-calculator-app);
-  border-radius:20px;
-  border: 6px solid #0f0e0e;
-  margin:30px
+  border-radius: 20px;
+  border: 3px solid #0f0e0e;
+  margin: 10px;
 }
 
 .row {
@@ -44,3 +42,39 @@
   align-items: center;
   justify-content: center;
 }
+
+
+@media (max-width: 768px) {
+  .freecodecamp-logo-container {
+    width: 55%;
+    height: auto;
+    margin: 20px auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .freecodecamp-logo  {
+    width: 350px;
+    height: auto;
+    margin: 20px auto;
+  }
+}
+
+
+@media (max-width: 768px) {
+  .container-calculator {
+    width: 25%;
+    height: 20%;
+    margin: 20px auto;
+  }
+}
+
+@media (max-width: 992px) {
+  .container-calculator {
+    width: 75%;
+    height: auto;
+    margin: 20px auto;
+  }
+}
+
+
