--- a/src/stylesheets/Screen/Screen.css
+++ b/src/stylesheets/Screen/Screen.css
@@ -13,3 +13,10 @@
   margin: 1px solid #888;
   box-shadow: -1px 4px 1px 1px #fff;
 }
+
+@media (max-width: 768px) {
+  .input {
+    font-size: 24px;
+    height: 70px;
+  }
+}
