--- a/src/App.css
+++ b/src/App.css
@@ -1,80 +1,18 @@
-.App {
-  width: 100%;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #e0dfeb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
-  padding: 10px;
-  background-color: var(--bg-color-app);
-  font-family: var(--font-family-calculator);
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
 }
 
-.freecodecamp-logo-container {
+#root {
   width: 100%;
-  height: 50px;
-  margin: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  max-width: 400px;
+  padding: 20px;
+  box-sizing: border-box;
 }
-
-.freecodecamp-logo {
-  background-color: var(--bg-logo);
-  height: 50px;
-  margin: 10px;
-}
-
-.container-calculator {
-  width: 400px;
-  height: 620px;
-  padding: 14px;
-  background-color: var(--bg-color-calculator-app);
-  border-radius: 20px;
-  border: 3px solid #0f0e0e;
-  margin: 10px;
-}
-
-.row {
-  margin: 4px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-
-@media (max-width: 768px) {
-  .freecodecamp-logo-container {
-    width: 55%;
-    height: auto;
-    margin: 20px auto;
-  }
-}
-
-@media (max-width: 768px) {
-  .freecodecamp-logo  {
-    width: 350px;
-    height: auto;
-    margin: 20px auto;
-  }
-}
-
-
-@media (max-width: 768px) {
-  .container-calculator {
-    width: 25%;
-    height: 20%;
-    margin: 20px auto;
-  }
-}
-
-@media (max-width: 992px) {
-  .container-calculator {
-    width: 75%;
-    height: auto;
-    margin: 20px auto;
-  }
-}
-
-
